MDEV-22651: Bogus assertion in dict_table_t::init_instant()

In commit 0e5a4ac2532c64a545796c787354dc41d61d0e62 (MDEV-15562)
we introduced a bogus debug assertion, demanding that dict_col_t::len
never exceed some maximum value. The intention was to match what
dict_index_add_col() is doing. But, the assignment field->fixed_len = 0
applies to dict_field_t::fixed_len, not dict_col_t::len!